MonetDB/src/mal/Tests/tst200.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## The series tst2?? is a patched version of suite_00
## The first and foremost BAT operations
#
#o:=oid(20000000);
!ERROR: WARNING:newConstant:int coerced to lng
#err:=setoid(o);
##test basic functionality of the BAT library.
##focussed on integers
##it includes insertions,deletions,selections, and joins.
#
#b:= new(int,int);
#err:= printf("#~BeginVariableOutput~#\n"); 
##binfo:= info(b);
##err:= print(binfo); 
#err:= printf("#~EndVariableOutput~#\n");
#
#err := insert(b,1,15);
#err := insert(b,2,4);
#n0  := int(nil);
#err := insert(b,3,n0);
#err := insert(b,4,16);
#err := insert(b,5,25);
#err := insert(b,6,36);
#err := insert(b,7,49);
#err := insert(b,8,64);
#err := insert(b,9,n0);
#err := insert(b,n0,n0);
#err := insert(b,n0,81);
#err := print(b);
#err := print(b,b,b);
#
function Admin.main():int;	#0:(main:int->0)
	o := atoms.oid(20000000);	#1:(o:oid->1)($2:int->2)
	err := atoms.setoid(o);	#2:(err:int->3)(o:oid->1)
	b := bat.new(int,int);	#3:(b:bat[int,int]->4)(int:int->5)(int:int->5)
	err := system.printf("#~BeginVariableOutput~#\n");	#4:(err:int->3)($6:str->6)
	err := system.printf("#~EndVariableOutput~#\n");	#5:(err:int->3)($7:str->7)
	err := bat.insert(b,1,15);	#6:(err:int->3)(b:bat[int,int]->4)($8:int->8)($9:int->9)
	err := bat.insert(b,2,4);	#7:(err:int->3)(b:bat[int,int]->4)($10:int->10)($11:int->11)
	n0 := atoms.int(nil);	#8:(n0:int->12)($13:void->13)
	err := bat.insert(b,3,n0);	#9:(err:int->3)(b:bat[int,int]->4)($14:int->14)(n0:int->12)
	err := bat.insert(b,4,16);	#10:(err:int->3)(b:bat[int,int]->4)($11:int->11)($15:int->15)
	err := bat.insert(b,5,25);	#11:(err:int->3)(b:bat[int,int]->4)($16:int->16)($17:int->17)
	err := bat.insert(b,6,36);	#12:(err:int->3)(b:bat[int,int]->4)($18:int->18)($19:int->19)
	err := bat.insert(b,7,49);	#13:(err:int->3)(b:bat[int,int]->4)($20:int->20)($21:int->21)
	err := bat.insert(b,8,64);	#14:(err:int->3)(b:bat[int,int]->4)($22:int->22)($23:int->23)
	err := bat.insert(b,9,n0);	#15:(err:int->3)(b:bat[int,int]->4)($24:int->24)(n0:int->12)
	err := bat.insert(b,n0,n0);	#16:(err:int->3)(b:bat[int,int]->4)(n0:int->12)(n0:int->12)
	err := bat.insert(b,n0,81);	#17:(err:int->3)(b:bat[int,int]->4)(n0:int->12)($25:int->25)
	err := system.print(b);	#18:(err:int->3)(b:bat[int,int]->4)
	err := system.print(b,b,b);	#19:(err:int->3)(b:bat[int,int]->4)(b:bat[int,int]->4)(b:bat[int,int]->4)
end function;	#20:
#~BeginVariableOutput~#
#~EndVariableOutput~#
#-----------------#
# BAT:	  tmp_6	  #
# (int)	  (int)	  #
#-----------------#
[ 1,	  15	  ]
[ 2,	  4	  ]
[ 3,	  nil	  ]
[ 4,	  16	  ]
[ 5,	  25	  ]
[ 6,	  36	  ]
[ 7,	  49	  ]
[ 8,	  64	  ]
[ 9,	  nil	  ]
[ nil,	  nil	  ]
[ nil,	  81	  ]
#-----------------#
# tmp_6	| tmp_6	  #
#-----------------#
[ 15,	  15	  ]
[ 4,	  4	  ]
[ nil,	  nil	  ]
[ 16,	  16	  ]
[ 25,	  25	  ]
[ 36,	  36	  ]
[ 49,	  49	  ]
[ 64,	  64	  ]
[ nil,	  nil	  ]
[ nil,	  81	  ]
[ nil,	  nil	  ]
[ 81,	  81	  ]
[ 81,	  nil	  ]
>